# Embedded-AI_Space-Framework

./: .gitignore  CMakeLists.txt  ReadMe.md
com/: uart_com.cpp
driver/: Makefile  timer_space.c  timer_space.ko
include/: common.hpp  proc.hpp
proc/: init.cpp  timer.cpp
task/: task_1.cpp
